Polish; document; test

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ export(req_options)
 export(req_perform)
 export(req_perform_iteratively)
 export(req_perform_parallel)
+export(req_perform_sequential)
 export(req_perform_stream)
 export(req_progress)
 export(req_proxy)
