Improve iteration documentation (#360)
Includes two new functions: `req_body_json_modify()` and `signal_total_pages()`.

Fixes #358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ export(req_auth_bearer_token)
 export(req_body_file)
 export(req_body_form)
 export(req_body_json)
+export(req_body_json_modify)
 export(req_body_multipart)
 export(req_body_raw)
 export(req_cache)
@@ -126,6 +127,7 @@ export(secret_has_key)
 export(secret_make_key)
 export(secret_read_rds)
 export(secret_write_rds)
+export(signal_total_pages)
 export(throttle_status)
 export(url_build)
 export(url_parse)
