--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -60,6 +60,7 @@ reference:
   contents:
   - req_perform_iteratively
   - req_perform_parallel
+  - req_perform_sequential
   - starts_with("iterate_")
   - starts_with("resps_")
 
