--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,7 +72,7 @@ export(req_oauth_password)
 export(req_oauth_refresh)
 export(req_options)
 export(req_perform)
-export(req_perform_iteratively)
+export(req_perform_iterative)
 export(req_perform_parallel)
 export(req_perform_stream)
 export(req_progress)
