--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -58,7 +58,7 @@ reference:
 
 - title: Perform multiple requests
   contents:
-  - req_perform_iteratively
+  - req_perform_iterative
   - req_perform_parallel
   - starts_with("iterate_")
   - starts_with("resps_")
