Rename to req_perform_iterate() (#366)
Fixes #363

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -58,7 +58,7 @@ reference:
 
 - title: Perform multiple requests
   contents:
-  - req_perform_iteratively
+  - req_perform_iterative
   - req_perform_parallel
   - req_perform_sequential
   - starts_with("iterate_")
