--- a/NAMESPACE
+++ b/NAMESPACE
@@ -137,6 +137,8 @@ export(with_mocked_responses)
 export(with_verbosity)
 import(R6)
 import(rlang)
+importFrom(curl,curl_version)
 importFrom(glue,glue)
 importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
+importFrom(utils,packageVersion)
