--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: httr2
 Title: Perform HTTP Requests and Process the Responses
 Version: 1.0.1.9000
 Authors@R: c(
-    person("Hadley", "Wickham", , "hadley@rstudio.com", role = c("aut", "cre")),
-    person("RStudio", role = c("cph", "fnd")),
+    person("Hadley", "Wickham", , "hadley@posit.co", role = c("aut", "cre")),
+    person("Posit Software, PBC", role = c("cph", "fnd")),
     person("Maximilian", "Girlich", role = "ctb")
   )
 Description: Tools for creating and modifying HTTP requests, then
