Draft for adding OAuth support in shiny

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method("[[",httr2_headers)
 S3method(print,httr2_cmd)
 S3method(print,httr2_headers)
 S3method(print,httr2_oauth_client)
+S3method(print,httr2_oauth_shiny_client)
 S3method(print,httr2_obfuscated)
 S3method(print,httr2_request)
 S3method(print,httr2_response)
@@ -45,6 +46,23 @@ export(oauth_flow_device)
 export(oauth_flow_password)
 export(oauth_flow_refresh)
 export(oauth_redirect_uri)
+export(oauth_shiny_app)
+export(oauth_shiny_app_example)
+export(oauth_shiny_app_passphrase)
+export(oauth_shiny_app_url)
+export(oauth_shiny_client)
+export(oauth_shiny_client_config)
+export(oauth_shiny_client_github)
+export(oauth_shiny_client_github_set_custom_claim)
+export(oauth_shiny_client_google)
+export(oauth_shiny_client_microsoft)
+export(oauth_shiny_client_spotify)
+export(oauth_shiny_client_spotify_set_custom_claim)
+export(oauth_shiny_get_access_token)
+export(oauth_shiny_get_app_token)
+export(oauth_shiny_ui_button)
+export(oauth_shiny_ui_login)
+export(oauth_shiny_ui_logout)
 export(oauth_token)
 export(oauth_token_cached)
 export(obfuscate)
