--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,9 +30,11 @@ Imports:
 Suggests:
     askpass,
     bench,
+    bslib,
     clipr,
     covr,
     docopt,
+    htmltools,
     httpuv,
     jose,
     jsonlite,
@@ -40,6 +42,8 @@ Suggests:
     later,
     promises,
     rmarkdown,
+    shiny,
+    sodium,
     testthat (>= 3.1.8),
     tibble,
     webfakes,
