Add req_perform_open, which makes resp$body the underlying stream

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ export(req_oauth_refresh)
 export(req_options)
 export(req_perform)
 export(req_perform_iterative)
+export(req_perform_open)
 export(req_perform_parallel)
 export(req_perform_promise)
 export(req_perform_sequential)
