--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,8 +72,8 @@ export(req_oauth_password)
 export(req_oauth_refresh)
 export(req_options)
 export(req_perform)
+export(req_perform_connection)
 export(req_perform_iterative)
-export(req_perform_open)
 export(req_perform_parallel)
 export(req_perform_promise)
 export(req_perform_sequential)
