--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ export(oauth_token)
 export(oauth_token_cached)
 export(obfuscate)
 export(obfuscated)
+export(read_sse)
 export(req_auth_basic)
 export(req_auth_bearer_token)
 export(req_body_file)
