Docs; fill in missing body type pieces

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,7 +49,6 @@ export(oauth_token)
 export(oauth_token_cached)
 export(obfuscate)
 export(obfuscated)
-export(read_sse)
 export(req_auth_basic)
 export(req_auth_bearer_token)
 export(req_body_file)
@@ -113,6 +112,7 @@ export(resp_raw)
 export(resp_retry_after)
 export(resp_status)
 export(resp_status_desc)
+export(resp_stream_sse)
 export(resp_url)
 export(resp_url_path)
 export(resp_url_queries)
