--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method("$",httr2_headers)
 S3method("[",httr2_headers)
 S3method("[[",httr2_headers)
+S3method(close,httr2_response)
 S3method(print,httr2_cmd)
 S3method(print,httr2_headers)
 S3method(print,httr2_oauth_client)
@@ -72,6 +73,7 @@ export(req_oauth_password)
 export(req_oauth_refresh)
 export(req_options)
 export(req_perform)
+export(req_perform_connection)
 export(req_perform_iterative)
 export(req_perform_parallel)
 export(req_perform_promise)
@@ -111,6 +113,9 @@ export(resp_raw)
 export(resp_retry_after)
 export(resp_status)
 export(resp_status_desc)
+export(resp_stream_lines)
+export(resp_stream_raw)
+export(resp_stream_sse)
 export(resp_url)
 export(resp_url_path)
 export(resp_url_queries)
