Implement `req_cookies_set()`
Fixes #369

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ export(req_body_multipart)
 export(req_body_raw)
 export(req_cache)
 export(req_cookie_preserve)
+export(req_cookies_set)
 export(req_dry_run)
 export(req_error)
 export(req_headers)
