--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -49,6 +49,7 @@ VignetteBuilder:
 Config/Needs/website: tidyverse/tidytemplate
 Config/testthat/edition: 3
 Config/testthat/parallel: true
+Config/testthat/start-first: resp-stream, req-perform
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
