--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ export(oauth_token)
 export(oauth_token_cached)
 export(obfuscate)
 export(obfuscated)
+export(req_auth_aws_v4)
 export(req_auth_basic)
 export(req_auth_bearer_token)
 export(req_body_file)
