--- a/NAMESPACE
+++ b/NAMESPACE
@@ -115,6 +115,7 @@ export(resp_raw)
 export(resp_retry_after)
 export(resp_status)
 export(resp_status_desc)
+export(resp_stream_aws)
 export(resp_stream_lines)
 export(resp_stream_raw)
 export(resp_stream_sse)
