Implement `oauth_cache_clear()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(last_response)
 export(local_mock)
 export(local_mocked_responses)
 export(multi_req_perform)
+export(oauth_cache_clear)
 export(oauth_cache_path)
 export(oauth_client)
 export(oauth_client_req_auth)
