Add support for RFC 8693 token exchange requests.
This commit adds a new OAuth "flow" to perform the token exchange
protocol described in RFC 8693 [0]. This is a pretty obscure and
advanced OAuth feature, but I thought it would be nice to have some
helpers to support it in `httr2`, anyway.

I'm not aware of *that* many implementations of this RFC, though there
are a few to note:

- GCP uses it for a couple of identity federation features [1].

- Okta uses it for some advanced delegation features [2].

- Some open-source auth tools like Curity seem to support it [3], as do
  various commercial identity management platforms like Asgardeo [4].

- Posit Connect uses it to power its OAuth integration feature [5].

Closes #460.

[0]: https://datatracker.ietf.org/doc/html/rfc8693
[1]: https://cloud.google.com/iam/docs/workforce-obtaining-short-lived-credentials
[2]: https://developer.okta.com/docs/guides/set-up-token-exchange/main/
[3]: https://curity.io/resources/learn/token-exchange-flow/
[4]: https://wso2.com/asgardeo/docs/guides/authentication/configure-token-exchange/
[5]: https://docs.posit.co/connect/admin/integrations/oauth-integrations/

Signed-off-by: Aaron Jacobs <aaron.jacobs@posit.co>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ export(oauth_flow_client_credentials)
 export(oauth_flow_device)
 export(oauth_flow_password)
 export(oauth_flow_refresh)
+export(oauth_flow_token_exchange)
 export(oauth_redirect_uri)
 export(oauth_token)
 export(oauth_token_cached)
@@ -74,6 +75,7 @@ export(req_oauth_client_credentials)
 export(req_oauth_device)
 export(req_oauth_password)
 export(req_oauth_refresh)
+export(req_oauth_token_exchange)
 export(req_options)
 export(req_perform)
 export(req_perform_connection)
