--- a/NAMESPACE
+++ b/NAMESPACE
@@ -119,6 +119,7 @@ export(resp_retry_after)
 export(resp_status)
 export(resp_status_desc)
 export(resp_stream_aws)
+export(resp_stream_is_complete)
 export(resp_stream_lines)
 export(resp_stream_raw)
 export(resp_stream_sse)
