--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,7 @@ export(req_cookies_set)
 export(req_dry_run)
 export(req_error)
 export(req_headers)
+export(req_headers_redacted)
 export(req_method)
 export(req_oauth)
 export(req_oauth_auth_code)
