--- a/NAMESPACE
+++ b/NAMESPACE
@@ -143,6 +143,7 @@ export(secret_write_rds)
 export(signal_total_pages)
 export(throttle_status)
 export(url_build)
+export(url_modify)
 export(url_parse)
 export(with_mock)
 export(with_mocked_responses)
