--- a/NAMESPACE
+++ b/NAMESPACE
@@ -95,6 +95,7 @@ export(req_url)
 export(req_url_path)
 export(req_url_path_append)
 export(req_url_query)
+export(req_url_relative)
 export(req_user_agent)
 export(req_verbose)
 export(request)
