Add url_modify_relative; unchanged -> as_is

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -148,6 +148,7 @@ export(throttle_status)
 export(url_build)
 export(url_modify)
 export(url_modify_query)
+export(url_modify_relative)
 export(url_parse)
 export(url_query_build)
 export(url_query_parse)
