--- a/NAMESPACE
+++ b/NAMESPACE
@@ -147,7 +147,11 @@ export(signal_total_pages)
 export(throttle_status)
 export(url_build)
 export(url_modify)
+export(url_modify_query)
+export(url_modify_relative)
 export(url_parse)
+export(url_query_build)
+export(url_query_parse)
 export(with_mock)
 export(with_mocked_responses)
 export(with_verbosity)
