Provide `is_online()`
Fixes #512

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(curl_help)
 export(curl_translate)
 export(example_github_client)
 export(example_url)
+export(is_online)
 export(iterate_with_cursor)
 export(iterate_with_link_url)
 export(iterate_with_offset)
