--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,11 +14,11 @@ S3method(print,httr2_token)
 S3method(print,httr2_url)
 S3method(str,httr2_obfuscated)
 export("%>%")
-export("is_online()")
 export(curl_help)
 export(curl_translate)
 export(example_github_client)
 export(example_url)
+export(is_online)
 export(iterate_with_cursor)
 export(iterate_with_link_url)
 export(iterate_with_offset)
