Test with dev curl

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -54,3 +54,4 @@ Config/testthat/start-first: resp-stream, req-perform
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+Remotes: jeroen/curl
