--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -55,3 +55,5 @@ Config/testthat/start-first: multi-req, resp-stream, req-perform
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+Remotes:  
+    r-lib/webfakes
