Expose request timing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -131,6 +131,7 @@ export(resp_stream_is_complete)
 export(resp_stream_lines)
 export(resp_stream_raw)
 export(resp_stream_sse)
+export(resp_timing)
 export(resp_url)
 export(resp_url_path)
 export(resp_url_queries)
