Don't serialize redacted headers
This required quite a lot of refactoring to clarify what's actually going on. It should now be clearer that there is a redacted sentinel value which is used to nicely format, print, and str redacted values that might be exposed to the user (I don't fully recall why I added this but I suspect it's because we only want to apply cli formatting at the exact time when the value is displayed). This code now lives in `utils-redacted.R`.

I also clarified the type of the headers object — the componets can either be an atomic vector or a weakref. And since redacted components now have their own type, we no longer need the `redact` attribute.

Fixes #721

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,18 +4,19 @@ S3method("$",httr2_headers)
 S3method("[",httr2_headers)
 S3method("[[",httr2_headers)
 S3method(close,httr2_response)
-S3method(format,httr2_redacted)
+S3method(format,httr2_redacted_sentinel)
 S3method(print,httr2_cmd)
 S3method(print,httr2_headers)
 S3method(print,httr2_oauth_client)
 S3method(print,httr2_obfuscated)
+S3method(print,httr2_redacted_sentinel)
 S3method(print,httr2_request)
 S3method(print,httr2_response)
 S3method(print,httr2_token)
 S3method(print,httr2_url)
 S3method(str,httr2_headers)
 S3method(str,httr2_obfuscated)
-S3method(str,httr2_redacted)
+S3method(str,httr2_redacted_sentinel)
 export("%>%")
 export(curl_help)
 export(curl_translate)
