Export `req_get_method()` and `req_get_body()`
Formerly known as `req_method_get()` and `req_body_get()`, but I think it's better to put exported accessors behind a common prefix.

Fixes #718

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,6 +74,8 @@ export(req_cookie_preserve)
 export(req_cookies_set)
 export(req_dry_run)
 export(req_error)
+export(req_get_body)
+export(req_get_method)
 export(req_headers)
 export(req_headers_redacted)
 export(req_method)
