Export `new_response()`
* Check all inputs, and test those checks
* Move `Date` header into `response()`
* Add new package development section to reference index

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(local_mock)
 export(local_mocked_responses)
 export(local_verbosity)
 export(multi_req_perform)
+export(new_response)
 export(oauth_cache_clear)
 export(oauth_cache_path)
 export(oauth_client)
