--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -33,7 +33,6 @@ reference:
       - last_request
       - req_dry_run
       - req_verbose
-      - with_mock
       - with_verbosity
 
   - subtitle: Authentication
@@ -78,8 +77,6 @@ reference:
     contents:
       - curl_translate
       - is_online
-      - secrets
-      - obfuscate
 
   - title: OAuth
     desc: >
@@ -87,6 +84,16 @@ reference:
     contents:
       - starts_with("oauth_")
       - -starts_with("req_oauth")
+
+  - title: Package development
+    desc: >
+      These functions are useful when developing packges that use httr2.
+    contents:
+      - with_mock
+      - secrets
+      - obfuscate
+      - response
+      - new_response
 
 articles:
   - title: Using httr2
