Export & document `StreamingBody()`
And update `new_response()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ S3method(str,httr2_headers)
 S3method(str,httr2_obfuscated)
 S3method(str,httr2_redacted_sentinel)
 export("%>%")
+export(StreamingBody)
 export(curl_help)
 export(curl_translate)
 export(example_github_client)
