--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -89,7 +89,7 @@ reference:
     desc: >
       These functions are useful when developing packges that use httr2.
     contents:
-      - with_mock
+      - with_mocked_responses
       - secrets
       - obfuscate
       - response
