Implement `req_get_headers()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,6 +75,7 @@ export(req_cookies_set)
 export(req_dry_run)
 export(req_error)
 export(req_get_body)
+export(req_get_headers)
 export(req_get_method)
 export(req_headers)
 export(req_headers_redacted)
