Add `req_get_url()` for completeness

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,6 +79,7 @@ export(req_get_body)
 export(req_get_body_type)
 export(req_get_headers)
 export(req_get_method)
+export(req_get_url)
 export(req_headers)
 export(req_headers_redacted)
 export(req_method)
