add httr2_translate function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(curl_help)
 export(curl_translate)
 export(example_github_client)
 export(example_url)
+export(httr2_translate)
 export(is_online)
 export(iterate_with_cursor)
 export(iterate_with_link_url)
