--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,7 +24,6 @@ export(curl_help)
 export(curl_translate)
 export(example_github_client)
 export(example_url)
-export(httr2_translate)
 export(is_online)
 export(iterate_with_cursor)
 export(iterate_with_link_url)
@@ -62,6 +61,7 @@ export(oauth_token)
 export(oauth_token_cached)
 export(obfuscate)
 export(obfuscated)
+export(req_as_curl)
 export(req_auth_aws_v4)
 export(req_auth_basic)
 export(req_auth_bearer_token)
