Revert test coverage workflow

--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -25,10 +25,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: |
-            any::covr
-            any::xml2
-            otelsdk=?ignore-before-r=4.3.0
+          extra-packages: any::covr, any::xml2
           needs: coverage
 
       - name: Test coverage
