--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,7 +41,7 @@ Suggests:
     nanonext,
     otel (>= 0.2.0),
     otelsdk (>= 0.2.0),
-    paws.common,
+    paws.common (>= 0.8.0),
     promises,
     rmarkdown,
     testthat (>= 3.1.8),
