--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -58,6 +58,7 @@ jobs:
           extra-packages: |
             any::rcmdcheck
             otelsdk=?ignore-before-r=4.3.0
+            paws.common=?ignore-before-r=4.3.0
           needs: check
 
       - uses: r-lib/actions/check-r-package@v2
